--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -11,4 +11,54 @@ body {
   @include font-smoothing(on);
   margin: 0;
   font: $base-text-size / 1 $base-font-family;
+  background-color: hsla(201, 100%, 50%, 1);
+}
+
+h1 {
+  text-align: center;
+  color: #fff;
+  font-style: italic;
+  font-size: 50px;
+  text-shadow: white;
+}
+
+table {
+  display: flex;
+  justify-content: center;
+}
+
+td {
+  border: 2px solid;
+  text-align: center;
+  height: 150px;
+  width: 150px;
+  font-size: 60px;
+  background-color: hsla(19, 100%, 50%, 0.95);
+  color: white;
+}
+
+.win {
+  display: none;
+  background-color: hsla(201, 100%, 50%, 0.56);
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 400px;
+  margin-left: -200px;
+  height: 200px;
+  margin-top: -100px;
+  text-align: center;
+  border-radius: 5px;
+
+  button {
+    height: 75px;
+    width: 75px;
+    margin-top: 50px;
+  }
+}
+
+body.games-been-won {
+  .win {
+    display: block;
+  }
 }
